--- a/论文常用词（英文）或符号中文含义.md
+++ b/论文常用词（英文）或符号中文含义.md
@@ -10,8 +10,6 @@
 
 词向量：讲单词以向量的形式表示，具有实际
 
-### 符号
-
 ### 英文缩写
 
 #### WRL
@@ -20,5 +18,13 @@ word represention learning：词表示学习
 
 #### WSD
 
-词义消歧（歧义）
+word sense disambiguation：词义消歧
+
+### 符号
+
+#### exp(x)
+
+e的x次方
+
+
 
