--- a/doc/论文常用词（英文）或符号中文含义.md
+++ b/doc/论文常用词（英文）或符号中文含义.md
@@ -16,7 +16,7 @@
 
 #### score
 
-权重
+权重，一般在神经网络中表示，最后计算的预测结果
 
 #### sememes
 
@@ -47,6 +47,10 @@ word represention learning：词表示学习
 word sense disambiguation：词义消歧
 
 ### 符号
+
+#### arg
+
+一个列子说明：arg maxf(x)的意思是当f(x)去最大值的时候，x的所有取值的集合
 
 #### exp(x)
 
