--- a/doc/论文常用词（英文）或符号中文含义.md
+++ b/doc/论文常用词（英文）或符号中文含义.md
@@ -24,6 +24,32 @@
 
 词向量：简单的理解就是将单词以向量的形式表示，具有实际。
 
+#### fuse
+
+融合、合成
+
+#### geometric
+
+几何
+
+#### metric
+
+公的、测量的、有韵律的
+
+#### matrix
+
+矩阵
+
+#### manifold
+
+多样的、复印本
+
+#### bi-directional
+
+双向的
+
+
+
 ### 英文缩写
 
 #### WRL
