--- a/doc/论文常用词（英文）或符号中文含义.md
+++ b/doc/论文常用词（英文）或符号中文含义.md
@@ -2,33 +2,14 @@
 
 ### 英文单词
 
+#### bi-directional
+
+双向的
+
 #### corpus
 
 语料库
 
-#### overfitting
-
-过拟合
-
-#### robust
-
-鲁棒性：指的是抗干扰的能力
-
-#### score
-
-权重，一般在神经网络中表示，最后计算的预测结果
-
-#### sememes
-
-义原：词义中最基本、不易于再分割的意义的最小单位，我们可以设定一个义原集合来表示出每个词的意义。
-
-出处：《Improved   Word   Representation   Learning   with   Sememes》
-
-#### word embedding
-
-词向量：简单的理解就是将单词以向量的形式表示，具有实际。
-
-<<<<<<< HEAD
 #### fuse
 
 融合、合成
@@ -49,9 +30,27 @@
 
 多样的、复印本
 
-#### bi-directional
+#### overfitting
 
-双向的
+过拟合
+
+#### robust
+
+鲁棒性：指的是抗干扰的能力
+
+#### score
+
+一般在神经网络中表示最后计算的预测结果吗，也可以表示权重
+
+#### sememes
+
+义原：词义中最基本、不易于再分割的意义的最小单位，我们可以设定一个义原集合来表示出每个词的意义。
+
+出处：《Improved   Word   Representation   Learning   with   Sememes》
+
+#### word embedding
+
+词向量：简单的理解就是将单词以向量的形式表示，具有实际。
 
 #### word sense
 
