--- a/doc/论文常用词（英文）或符号中文含义.md
+++ b/doc/论文常用词（英文）或符号中文含义.md
@@ -18,6 +18,10 @@
 
 几何
 
+#### heterogeneous
+
+异构：
+
 #### metric
 
 公的、测量的、有韵律的
@@ -60,6 +64,10 @@
 #### ACO
 
 ant clony optimization：蚁群算法
+
+#### ResNet
+
+residual network：残差网络
 
 #### WRL
 
